--- a/source/_posts/小绒毛的足迹-终于备案成功！可喜可贺！.md
+++ b/source/_posts/小绒毛的足迹-终于备案成功！可喜可贺！.md
@@ -10,7 +10,8 @@ tags:
 
 ---
 
-![](https://res.cloudinary.com/dy5dvcuc1/image/upload/v1529489382/xiaorongmao/16080200061212.jpg)
+{% img https://res.cloudinary.com/dy5dvcuc1/image/upload/v1529489382/xiaorongmao/16080200061212.jpg "" %}
+
 
 非常开心呀！在国内开个个人博客，需要备案还是蛮复杂的，经过了九九八十一难之后，我也正式跟大家见面了。
 
